fix: potential file handles leak when importing from XMind file and Novamind file(https://github.com/mindolph/Mindolph/issues/13). some minor refactors for Mind Map importers and exporters.